--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,11 @@
 	<title>{% if page.title %}{{ page.title | escape }} | {{ site.title }}{% elsif page.type == "landing" %}{{ page.parent }} | {{ site.title }}{% else %}{{ site.title | escape }}{% endif %}</title>
 	<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
+	{% if page.custom_css %}
+  	{% for stylesheet in page.custom_css %}
+  	<link rel="stylesheet" href="/css/{{ stylesheet }}.css" media="screen" type="text/css">
+  	{% endfor %}
+	{% endif %}
 	<link rel="stylesheet" href="{{ "/css" | prepend: site.baseurl }}/main.css">
 	<link rel="stylesheet" href="{{ "/css/style-guide.css" | prepend: site.baseurl }}">
 	<link rel="icon" href="{{ "/favicon.ico" | prepend: site.baseurl }}">
