--- a/css/rocky_style.css
+++ b/css/rocky_style.css
@@ -21,6 +21,10 @@ p {
   margin-bottom: 20px;
 }
 
+.logo {
+  margin: 10px;
+}
+
 /* Text boxes ============================================================== */
 .text_box {
   width: 700px;
