Expanded the image section
Added two images, and explanations on how to use them, with examples.

--- a/_layouts/style.html
+++ b/_layouts/style.html
@@ -36,5 +36,13 @@ layout: default
 	</div>
 	<div id="image_wrap" class="section_wrap">
 		<h2>Image Usage</h2>
-		<p>Product images go on a white background only.</p>
+		<p>{{page.image_explanation}}</p>
+		<div class="image_example">
+			<img alt="Product image" src="{{page.product_image}}">
+			<p>{{page.image_text_01}}</p>
+		</div>
+		<div id="image_example_01" class="image_example">
+			<img alt="Product image" src="{{page.product_image}}">
+			<p>{{page.image_text_02}}</p>
+		</div>
 	</div>
