CSS Showing on Live Site
Added 'styleguide/' to stylesheet link to properly link for live site.
Also, change template to have 'dynamic' alt text for logos.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
 	<!-- Cody, this is what I had to add. -->
 	{% if page.custom_css %}
   	{% for stylesheet in page.custom_css %}
-  	<link rel="stylesheet" href="/css/{{ stylesheet }}.css" media="screen" type="text/css">
+  	<link rel="stylesheet" href="styleguide/css/{{ stylesheet }}.css" media="screen" type="text/css">
   	{% endfor %}
 	{% endif %}
 	<link rel="stylesheet" href="{{ "/css" | prepend: site.baseurl }}/main.css">
