--- a/_layouts/style.html
+++ b/_layouts/style.html
@@ -6,8 +6,8 @@ layout: default
 
 	<div id="text_wrap" class="section_wrap">
 		<h2>Logo Usage</h2>
-		<img class="logo" alt="Wide Rocky logo" src="{{page.logo_01}}">
-		<img class="logo" alt="Rocky logo" src="{{page.logo_02}}">
+		<img class="logo" alt="{{logo_alt_01}}" src="{{page.logo_01}}">
+		<img class="logo" alt="{{logo_alt_02}}" src="{{page.logo_02}}">
 	</div>
 
 	<div id="color_wrap" class="section_wrap">
